--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -1,4 +1,9 @@
+<div class="container">
 <% @boats.each do |boat| %>
-  <p><%= link_to boat.name, boat_path(boat) %></p>
-   <p> ________________ </p>
+  <%= link_to(boat_path(boat), :class => "boat-text") do %>
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1588401273872-959d2076283a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1334&q=80)">
+<%= boat.name %>
+</div>
+  <% end %> 
 <% end %>
+</div> 
