implement edit and update methods on boat

--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -3,3 +3,4 @@
 <p><%= @boat.price %> </p>
 <p><%= @boat.location %> </p>
 <%= link_to "SHOW ALL BOATS",boats_path %>
+<%= link_to "Edit your boat",edit_boat_path %>
