--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -1,5 +1,10 @@
-<p><%= @boat.name %></p>
-<p><%= @boat.description %></p>
-<p><%= @boat.price %> </p>
+<h1><%= @boat.name %></h1>
 <p><%= @boat.location %> </p>
-<%= link_to "SHOW ALL BOATS",boats_path %>
+<%= cl_image_tag @boat.image.key, width: 500, height: 300, class: "rounded-lg" %>
+<div>
+  <p><%= @boat.description %></p>
+</div>
+<div>
+  <p>€<%= @boat.price %> </p>
+</div>
+<%= link_to "back",boats_path %>
