--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -11,6 +11,7 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   margin-top: 20px;
+  width: 500px;
 }
 .boat-text {
   color: white;
@@ -24,6 +25,22 @@
   letter-spacing: 2px;
 }
 .card-category:hover {
-  //box-shadow: 5px 5px #080808;
+  
   box-shadow:0px -1px 10px rgba(0,0,0,0.5), 0px 1px 25px rgba(0,0,0,0.7);
+}
+
+@media(max-width: 992px) {
+  .card-category {
+ width: 600px;
+  }
+}
+@media(max-width: 768px) {
+  .card-category {
+    width: 400px;
+  }
+}
+@media(max-width: 512px) {
+  .card-category {
+    width: 300px;
+  }
 }
