--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -4,3 +4,6 @@
 <p><%= @boat.location %> </p>
 <%= link_to "SHOW ALL BOATS",boats_path %>
 <%= link_to "Edit your boat",edit_boat_path %>
+
+
+<%= link_to "Remove", boat_path(@boat), method: :delete, date: {confirm: "Are you sure"} %>
