create new booking works

--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -12,3 +12,4 @@
 
 
 <%= link_to "Remove", boat_path(@boat), method: :delete, date: {confirm: "Are you sure"} %>
+<%= link_to 'book', new_boat_booking_path(@boat) %>
