--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,2 +1,3 @@
 <h1>Bookings#show</h1>
 <p>Find me in app/views/bookings/show.html.erb</p>
+<%= link_to 'cancel booking', booking_path(@booking), method: :delete, data: { confirm: "Are you sure?" } %>
