--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -12,6 +12,7 @@
   border-radius: 5px;
   margin-top: 20px;
   width: 500px;
+  text-align: center;
 }
 .boat-text {
   color: white;
@@ -20,13 +21,23 @@
   font-weight: bold;
 }
 .boat-text:hover {
-  color: #999;
+  color: black;
   text-decoration: none;
   letter-spacing: 2px;
 }
 .card-category:hover {
   
   box-shadow:0px -1px 10px rgba(0,0,0,0.5), 0px 1px 25px rgba(0,0,0,0.7);
+}
+.boat-name {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  white-space: nowrap;
+}
+.boat-parent {
+  position: relative;
 }
 
 @media(max-width: 992px) {
