--- a/app/views/boats/new.html.erb
+++ b/app/views/boats/new.html.erb
@@ -6,6 +6,7 @@
         <%= f.input :description %>
         <%= f.input :price %>
         <%= f.input :location %>
+        <%= f.input :image, as: :file %>
         <%= f.button :submit, class: "btn-primary" %>
       <% end %>
     </div>
