--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Dashboard#index</h1>
-<p>Find me in app/views/dashboard/index.html.erb</p>
+<h1>Bookings</h1>
+<div class="my-bookings">
+  <% @bookings.each do |booking| %>
+  <%= link_to booking_path(booking) do  %>
+  <div class="card" style="width: 18rem;">
+    <img class="" src="<%= cl_image_path booking.boat.image.key,  height: 300, width: 300, crop: :fill %>" alt="boat image">
+    <div class="card-body">
+      <h5 class="card-title"><%= booking.boat.name %></h5>
+      <p><%= booking.boat.location %></p>
+      <p><%= booking.start_date %> - <%= booking.end_date %></p>
+    </div>
+  </div>
+  <% end %>
+  <% end %>
+</div>
