--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -1,14 +1,14 @@
 <div class="container-boats">
   <div>
     <% @boats.each do |boat| %>
-      <%= link_to(boat_path(boat), :class => "boat-text") do %>
+      <%= link_to(boat_path(boat), class: "boat-text", target: :_blank) do %>
     <div class="boat-parent">
     <%= cl_image_tag boat.image.key, width: 500, height: 300, class: "card-category" %>
       <p class="boat-name"> <%= boat.name %> </p>
     </div>
-      <% end %> 
+      <% end %>
     <% end %>
   </div>
   <img id="map" src='https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/2.3381,48.8693,10.45,0,0/600x1000?access_token=pk.eyJ1Ijoia29tbmVuZ3J1IiwiYSI6ImNrZ3diYzU4dDA4bWQzMXJya2k4NWI0dzYifQ.MyI-ty8lAR3NvE2jZpjeAQ'>
-</div> 
+</div>
 
