--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
 
-  <body style="background-image: url('https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwallpapercave.com%2Fwp%2Fb66RjvK.jpg&f=1&nofb=1');
-  background-size: cover; background-repeat: no-repeat;">
-  
+  <body>
     <%= render 'shared/navbar' %>
     <div class="container">
       <%= yield %>
