--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -13,11 +13,11 @@
       <% end %>
     </div>
   </div>
-  <div class="d-flex justify-content-center">
-    <%= cl_image_tag @boat.image.key, width: 500%>
+  <div class="d-flex justify-content-center" style="height: 400px;">
+    <%= cl_image_tag @boat.image.key, style: "object-fit: cover;"%>
   </div>
 </div>
-<div class="d-flex mt-5 mb-5">
+<div class="d-flex mb-5 position-relative" style="top: -30px;">
   <div class="col-8 bg-white mr-3 p-3">
     <p><%= @boat.description %></p>
   </div>
