--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -2,7 +2,7 @@
   <div class="d-flex">
     <div>
       <h1><%= @boat.name %></h1>
-      <p class="text-secondary"><%= @boat.location %> </p>
+      <p class="text-secondary"><%= @boat.address %> </p>
     </div>
     <div class="ml-5">
       <%= link_to edit_boat_path, class: "btn btn-outline-primary" do%>
