--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -9,6 +9,9 @@
       <% end %> 
     <% end %>
   </div>
-  <img id="map" src='https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/2.3381,48.8693,10.45,0,0/600x1000?access_token=pk.eyJ1Ijoia29tbmVuZ3J1IiwiYSI6ImNrZ3diYzU4dDA4bWQzMXJya2k4NWI0dzYifQ.MyI-ty8lAR3NvE2jZpjeAQ'>
+  <div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
 </div> 
 
