--- a/app/views/boats/new.html.erb
+++ b/app/views/boats/new.html.erb
@@ -1,16 +1,3 @@
-<div class="col d-flex justify-content-center">
-  <div class="form-container">
-    <div class="form-new">
-      <%= simple_form_for (@boat) do |f| %>
-        <%= f.input :name %>
-        <%= f.input :description %>
-        <%= f.input :price %>
-        <%= f.input :location %>
-        <%= f.input :image, as: :file %>
-        <%= f.button :submit, class: "btn-primary" %>
-      <% end %>
-    </div>
-  </div>
-</div>
+<%= render 'form', boat: @boat %>
 
 
