--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -9,7 +9,7 @@
               <img class="" src="<%= cl_image_path booking.boat.image.key,  height: 300, width: 300, crop: :fill %>" alt="boat image">
               <div class="card-body">
                 <h5 class="card-title"><%= booking.boat.name %></h5>
-                <p><%= booking.boat.location %></p>
+                <p><%= booking.boat.address %></p>
                 <p><%= booking.start_date %> - <%= booking.end_date %></p>
               </div>
             </div>
