--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -21,13 +21,18 @@
   font-weight: bold;
 }
 .boat-text:hover {
-  color: black;
+  color: white;
   text-decoration: none;
   letter-spacing: 2px;
+  .card-category {
+    box-shadow:0px -1px 10px rgba(0,0,0,0.5), 0px 1px 25px rgba(0,0,0,0.7);
+  }
 }
 .card-category:hover {
-  
   box-shadow:0px -1px 10px rgba(0,0,0,0.5), 0px 1px 25px rgba(0,0,0,0.7);
+  .boat-text {
+    letter-spacing: 2px;
+  }
 }
 .boat-name {
   position: absolute;
