--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -11,6 +11,14 @@
   
   box-shadow:0px -1px 10px rgba(0,0,0,0.5), 0px 1px 25px rgba(0,0,0,0.7);
 }
+.mapboxgl-popup {
+  max-width: 200px;
+}
+
+.mapboxgl-popup-content {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+}
 @media(max-width: 992px) {
   #map {
     display: none;
