--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,4 +12,6 @@
 @import "components/index";
 @import "pages/index";
 @import "pages/new";
+@import "pages/dashboard";
 @import 'mapbox-gl/dist/mapbox-gl';
+
