restyled boats index and added ability to search with nothing in location field

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon position-sticky sticky-top">
   <%= link_to root_path, class: "navbar-brand" do %>
     <i class="fas fa-anchor"> SeaBnB </i>
     <% end %>
