--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,62 +1,44 @@
-.card-category {
-  background-size: cover;
-  background-position: center;
-  height: 180px;
+.card-product {
+  overflow: hidden;
+  height: 120px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.1);
   display: flex;
-  justify-content: center;
   align-items: center;
-  color: white;
-  font-size: 28px;
-  font-weight: bold;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  border-radius: 5px;
-  margin-top: 20px;
-  width: 500px;
-  text-align: center;
-}
-.boat-text {
-  color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 28px;
-  font-weight: bold;
-}
-.boat-text:hover {
-  color: white;
-  text-decoration: none;
-  letter-spacing: 2px;
-  .card-category {
-    box-shadow:0px -1px 10px rgba(0,0,0,0.5), 0px 1px 25px rgba(0,0,0,0.7);
-  }
-}
-.card-category:hover {
-  box-shadow:0px -1px 10px rgba(0,0,0,0.5), 0px 1px 25px rgba(0,0,0,0.7);
-  .boat-text {
-    letter-spacing: 2px;
-  }
-}
-.boat-name {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  white-space: nowrap;
-}
-.boat-parent {
-  position: relative;
 }
 
-@media(max-width: 992px) {
-  .card-category {
- width: 600px;
-  }
+.card-product img {
+  height: 100%;
+  width: 120px;
+  object-fit: cover;
 }
-@media(max-width: 768px) {
-  .card-category {
-    width: 400px;
-  }
+
+.card-product h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
 }
-@media(max-width: 512px) {
-  .card-category {
-    width: 300px;
+
+.card-product p {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
+
+.card-product .card-product-infos {
+  padding: 16px;
+}
+
+.boat-card {
+  color: black;
+}
+
+.boat-card:hover {
+  color: black;
+  text-decoration: none;
+  .card-product {
+    box-shadow: 0 0 15px rgba(0,0,0,0.3);
   }
 }
