--- a/app/assets/stylesheets/components/_container-boats.scss
+++ b/app/assets/stylesheets/components/_container-boats.scss
@@ -1,26 +1,26 @@
-.container-boats {
-  margin-top: 10px;
-  margin-bottom: 100px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
+// .container-boats {
+//   margin-top: 10px;
+//   margin-bottom: 100px;
+//   width: 100%;
+//   display: flex;
+//   justify-content: center;
+// }
 
-@media (max-width: 960px) {
-  /* For a screen < 960px, this CSS will be read */
-  .container-boats {
-    width: 700px;
-  }
-}
-@media (max-width: 720px) {
-  /* For a screen < 720px, this CSS will be read */
-  .container-boats {
-    width: 500px;
-  }
-}
-@media (max-width: 540px) {
-  /* For a screen < 540px, this CSS will be read */
-  .container-boats {
-    width: 400px;
-  }
-}
+// @media (max-width: 960px) {
+//   /* For a screen < 960px, this CSS will be read */
+//   .container-boats {
+//     width: 700px;
+//   }
+// }
+// @media (max-width: 720px) {
+//   /* For a screen < 720px, this CSS will be read */
+//   .container-boats {
+//     width: 500px;
+//   }
+// }
+// @media (max-width: 540px) {
+//   /* For a screen < 540px, this CSS will be read */
+//   .container-boats {
+//     width: 400px;
+//   }
+// }
