--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,3 +5,17 @@
 @import "card";
 @import "container-boats";
 @import "map";
+
+.boat-list {
+  width: 50%;
+  padding: 10px;
+}
+
+@media(max-width: 992px) {
+  #map {
+    display: none;
+  }
+  .boat-list {
+    width: 100%;
+  }
+}
