--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,16 +1,10 @@
 #map {
   height: 100vh;
-  position: sticky;
-  top: 0;
-  margin-top: 20px;
-  width: 500px;
-  border-radius: 5px;
-  margin-left: 20px;
+  position: fixed;
+  top: 55px;
+  right: 0;
 }
-#map:hover {
-  
-  box-shadow:0px -1px 10px rgba(0,0,0,0.5), 0px 1px 25px rgba(0,0,0,0.7);
-}
+
 .mapboxgl-popup {
   max-width: 200px;
 }
@@ -18,14 +12,4 @@
 .mapboxgl-popup-content {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
-}
-@media(max-width: 992px) {
-  #map {
-    display: none;
-  }
-}
-@media(max-width: 768px) {
-  #map {
-        display: none;
-  }
 }
