--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,11 +1,13 @@
 
 <div class="dashboard-container">
   <div class="row mt-5 mx-n5">
-    <div class="bookings-container col-12 col-lg-6 px-5" style="background-color: white;">
-      <h1>My bookings</h1>
+  <% if @bookings.present? %>
+    <div class="bookings-container col-12 <%= @boats.present? ? 'col-lg-6' : '' %> px-5" style="background-color: white;">
+      <h1 class="title-dashboard">My bookings</h1>
+      <div class="row justify-content-center">
         <% @bookings.each do |booking| %>
           <%= link_to booking_path(booking), class: "boat-text" do  %>
-            <div class="card mx-auto my-5" style="width: 300px;">
+            <div class="card col mx-3 my-5" style="width: 300px;">
               <img class="" src="<%= cl_image_path booking.boat.image.key,  height: 300, width: 300, crop: :fill %>" alt="boat image">
               <div class="card-body">
                 <h5 class="card-text"><%= booking.boat.name %></h5>
@@ -15,21 +17,25 @@
             </div>
           <% end %>
         <% end %>
+      </div>
     </div>
-
-    <div class="owned-boats-container col 12 col-lg-6 px-5 " style="background-color: white;">
-      <h1>My boats</h1>
-      <% @boats.each do |boat| %>
-        <%= link_to boat_path(boat) do  %>
-        <div class="card mx-auto my-5" style="width: 300px;">
-          <img class="" src="<%= cl_image_path boat.image.key,  height: 300, width: 300, crop: :fill %>" alt="boat image">
-          <div class="card-body">
-              <h5 class="card-text"><%= boat.name %></h5>
-          </div>
-        </div>
-      <% end %>
-       <% end %>
+  <% end %>
+    <% if @boats.present?  %>
+    <div class="owned-boats-container col 12 <%= @bookings.present? ? 'col-lg-6' : '' %> px-5 " style="background-color: white;">
+      <h1 class="title-dashboard">My boats</h1>
+      <div class="row justify-content-center">
+        <% @boats.each do |boat| %>
+          <%= link_to boat_path(boat) do  %>
+            <div class="card col mx-3 my-5" style="width: 300px;">
+              <img class="" src="<%= cl_image_path boat.image.key,  height: 300, width: 300, crop: :fill %>" alt="boat image">
+              <div class="card-body">
+                  <h5 class="card-text"><%= boat.name %></h5>
+              </div>
+            </div>
+          <% end %>
+        <% end %>
+      </div>
     </div>
+    <% end %>
   </div>
 </div>
-
