--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -2,41 +2,48 @@
   font-size: 24px;
   font-weight: bold;
   border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
   border-style: solid;
 
 }
 
 .card:hover {
-  box-shadow:0px 0px 15px rgba(0,0,0,0.2), 0px 0px 15px rgba(0,0,0,0.5);
+  box-shadow:0px 0px 10px rgba(0,0,0,0.2), 0px 0px 10px rgba(0,0,0,0.5);
 }
 
 .card-text {
-  font-size: 24px;
+  font-size: 22px;
   color: black;
   font-weight: bold;
+  text-align: center;
 }
+.card-address {
+  font-size: 16px;
+  font-family: $body-font;
+  color: darkgrey;
 
-.card-text:hover {
-  text-decoration: none;
-  white-space: nowrap;
 }
 
 .card-date {
-  font-size: 18px;
+  font-size: 12px;
   color: darkgrey;
 }
 
 .bookings-container {
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
   width: 500px;
+  border-right: 1px solid gray;
 }
 
 .owned-boats-container {
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
   width: 500px;
 }
 .title-dashboard {
   text-align: center;
+  font-family: $headers-font;
+  padding-top: 10px;
+  white-space: nowrap;
+  text-decoration: underline;
 }
-
+a:hover {
+  text-decoration: none;
+}
