--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,18 +1,18 @@
 
 <div class="dashboard-container">
-  <div class="row mt-5 mx-n5">
+  <div class="row mx-n5">
   <% if @bookings.present? %>
     <div class="bookings-container col-12 <%= @boats.present? ? 'col-lg-6' : '' %> px-5" style="background-color: white;">
       <h1 class="title-dashboard">My bookings</h1>
       <div class="row justify-content-center">
         <% @bookings.each do |booking| %>
           <%= link_to booking_path(booking), class: "boat-text" do  %>
-            <div class="card col mx-3 my-5" style="width: 300px;">
+            <div class="card col px-0 mx-3 my-5" style="width: 300px;">
               <img class="" src="<%= cl_image_path booking.boat.image.key,  height: 300, width: 300, crop: :fill %>" alt="boat image">
               <div class="card-body">
                 <h5 class="card-text"><%= booking.boat.name %></h5>
-                <p class="card-text"><%= booking.boat.address %></p>
-                <p class="card-date"><%= booking.start_date %> - <%= booking.end_date %></p>
+                <p class="card-address"><%= booking.boat.address %></p>
+                <p class="card-date"><%= l(booking.start_date, format: :long) %> - <%= l(booking.end_date, format: :long) %></p>
               </div>
             </div>
           <% end %>
@@ -26,7 +26,7 @@
       <div class="row justify-content-center">
         <% @boats.each do |boat| %>
           <%= link_to boat_path(boat) do  %>
-            <div class="card col mx-3 my-5" style="width: 300px;">
+            <div class="card col mx-3 px-0 my-5" style="width: 300px;">
               <img class="" src="<%= cl_image_path boat.image.key,  height: 300, width: 300, crop: :fill %>" alt="boat image">
               <div class="card-body">
                   <h5 class="card-text"><%= boat.name %></h5>
