--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,16 @@
-<div class="d-flex justify-content-center">
-  <%= simple_form_for :search, html: {class: 'col-12 col-md-8 col-lg-6'}, url: boats_path, method: "GET" do |f| %>
-    <%= f.input :address, placeholder: "Where are you going?", class: "input-medium search-query" %>
-    <%= f.input :start_date, as: :date %>
-    <%= f.input :end_date, as: :date %>
-    <%= f.submit "Search", class: "btn btn-primary w-100"%>
-  <% end %>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1491316713428-0cbd516756a3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
+  <div class="d-flex justify-content-center">
+    <div class="search-bar"></div>
+      <%= simple_form_for :search, html: {class: ' form-inline'}, url: boats_path, method: "GET" do |f| %>
+        <%= f.input :address, label: false, placeholder: "Where are you going?", class: "input-medium search-query" %>
+        <%= f.submit "Search", class: "btn btn-primary ml-4"%>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+<div class="boats-preview">
+  <div class="d-flex justify-content-between">
+    <h1>~~~Newest boats preview displayed here~~~</h1>
+  </div>
 </div>
