--- a/app/views/boats/show.html.erb
+++ b/app/views/boats/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="mt-5">
     <div class="d-flex justify-content-between">
       <div>
@@ -27,4 +27,29 @@
       <%= link_to 'Book', new_boat_booking_path(@boat), class: "btn btn-success" %>
     </div>
   </div>
+</div> -->
+
+
+
+<div class="card-trip">
+  <%= cl_image_tag @boat.image.key, widht: 100, height: 100 %>
+  <div class="card-trip-infos">
+    <div>
+      <h2><%= @boat.name %></h2>
+      <p><%= @boat.address %></p>
+      <p><%= @boat.description  %></p>
+    </div>
+
+    <div class="card-trip-infos-right">
+      <div class="boatprice mr-2 font-weight-bold">€<%= @boat.price.floor %> / day </div>
+
+      <div class="card-trip-pricing">
+        <%= link_to 'Book', new_boat_booking_path(@boat), class: "btn btn-flat book" %>
+        <%= link_to 'Edit', edit_boat_path, class: "btn btn-ghost" %>
+        <%= link_to 'Delete', boat_path(@boat), method: :delete, date: {confirm: "Are you sure"}, class: "btn btn-gradient delete" %>
+      </div>
+    </div>
+  </div>
 </div>
+
+
