--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,14 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1491316713428-0cbd516756a3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
   <div class="d-flex justify-content-center">
     <div class="search-bar"></div>
-      <%= simple_form_for :search, html: {class: ' form-inline'}, url: boats_path, method: "GET" do |f| %>
-        <%= f.input :address, label: false, placeholder: "Where are you going?", class: "input-medium search-query" %>
-        <%= f.submit "Search", class: "btn btn-primary ml-4"%>
-      <% end %>
+      <%= form_tag boats_path, method: :get do %>
+  <%= text_field_tag :address,
+    params[:address],
+    class: "form-control",
+    placeholder: "Where are you going?"
+  %>
+  <%= submit_tag "Search", class: "btn btn-primary ml-4" %>
+<% end %>
     </div>
   </div>
 </div>
@@ -14,3 +18,10 @@
     <h1>~~~Newest boats preview displayed here~~~</h1>
   </div>
 </div>
+
+
+<!-- <%= simple_form_for :search, html: {class: ' form-inline'}, url: boats_path, method: "GET" do |f| %>
+        <%= f.input :address, label: false, placeholder: "Where are you going?", class: "input-medium search-query" %>
+        <%= f.submit "Search", class: "btn btn-primary ml-4"%>
+      <% end %> -->
+  
