--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,21 +1,18 @@
-<!-- <h1></h1>
-<%= cl_image_tag @booking.boat.image.key, widht: 500, height: 300 %>
-<p><%= @booking.boat.address %></p>
-<p><%= @booking.start_date %> - <%= @booking.end_date %></p>
-<%= link_to 'cancel booking', booking_path(@booking), method: :delete, data: { confirm: "Are you sure?" } %>
-<%= link_to 'edit booking', edit_booking_path(@booking) %>
-<%= link_to 'back', dashboard_path %> -->
-
-
 <div class="card-trip">
-  <img <%= cl_image_tag @booking.boat.image.key, widht: 500, height: 300 %>
+  <img <%= cl_image_tag @booking.boat.image.key, widht: 500, height: 300 %> >
   <div class="card-trip-infos">
     <div>
       <h2><%= @booking.boat.name %></h2>
       <p><%= @booking.boat.address %></p>
       <p><%= @booking.start_date %> - <%= @booking.end_date %></p>
     </div>
-    <h2 class="card-trip-pricing"><%= link_to 'cancel booking', booking_path(@booking), class: "btn btn-flat", method: :delete, data: { confirm: "Are you sure?" } %> <%= link_to 'edit booking', edit_booking_path(@booking), class: "btn btn-ghost" %> <%= link_to 'back', dashboard_path, class: "btn btn-gradient" %></h2>
+    <h2 class="card-trip-pricing">
+      <%= link_to 'cancel booking', booking_path(@booking), class: "btn btn-flat", method: :delete, data: { confirm: "Are you sure?" } %>
+      <% if policy(@booking).edit? %>
+        <%= link_to 'edit booking', edit_booking_path(@booking), class: "btn btn-ghost" %>
+      <% end %>
+      <%= link_to 'back', dashboard_path, class: "btn btn-gradient" %>
+      </h2>
   </div>
 </div>
 
