--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,7 +6,7 @@
   height: 60px;
   padding: 0px 30px;
   color: rgba(0,0,0,0.3);
-  position: static;
+  position: relative;
   width: 100%;
   bottom: 0;
 }
