--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,12 +11,9 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <!-- <li class="nav-item active">
-          <%= link_to "Home", root_path, class: "nav-link" %>
+        <li class="nav-item active">
+          <%= link_to "Add Boat", new_boat_path, class: "nav-link btn btn-primary text-white mx-3 btn-sm" %>
         </li>
-        <li class="nav-item">
-          <%= link_to "Messages", "#", class: "nav-link" %>
-        </li> -->
         <li class="nav-item dropdown">
           <% if current_user.picture.attached? %>
             <%= cl_image_tag current_user.picture.key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false, transformation: [{width: 1000, height: 1000, :radius=>"max", gravity: "face", crop: "crop"}, {width: 50, crop: "scale"}]%>
@@ -26,7 +23,6 @@
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "Edit profile", edit_user_registration_path, class: "dropdown-item" %>
             <%= link_to "My bookings", dashboard_index_path, class: "dropdown-item" %>
-            <%= link_to "Add a boat", new_boat_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
