--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -2,8 +2,8 @@
   <div class="form-container">
     <div class="form-new">
       <%= simple_form_for [@boat, @booking] do |f| %>
-        <%= f.input :start_date, as: :date %>
-        <%= f.input :end_date, as: :date %>
+        <%= f.input :start_date, as: :string, required: false, input_html:{class: "datepicker"} %>
+        <%= f.input :end_date, as: :string, required: false, input_html:{class: "datepicker"} %>
         <%= f.hidden_field :status, value: 'pending' %>
         <%= f.button :submit, class: "btn-primary" %>
       <% end %>
