--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,12 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
-    <%= yield %>
-    <%= render 'shared/footer' %>
+    <div id="page-container">
+      <div id="content-wrap">
+        <%= render 'shared/navbar' %>
+        <%= yield %>
+      </div>
+        <%= render 'shared/footer' %>
+    </div>
   </body>
 </html>
