--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -20,7 +20,7 @@
   <% end %>
 </div>
 <div id="map" class="w-50"
-   style="width: 100%; height: 600px; z-index: 0;"
+   style="width: 100%; height: 100%; z-index: 0;"
    data-markers="<%= @markers.to_json %>"
    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
 </div>
