--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,11 +1,16 @@
 <div class="col d-flex justify-content-center">
   <div class="form-container">
     <div class="form-new">
+      <h1>Create New Booking</h1>
+
       <%= simple_form_for [@boat, @booking] do |f| %>
         <%= f.input :start_date, as: :string, required: false, input_html:{class: "datepicker"} %>
         <%= f.input :end_date, as: :string, required: false, input_html:{class: "datepicker"} %>
         <%= f.hidden_field :status, value: 'pending' %>
-        <%= f.button :submit, class: "btn-primary" %>
+        <div class="d-flex justify-content-between">
+          <%= f.button :submit, class: "btn-primary" %>
+          <%= link_to 'Back', boat_path(@boat), :class => "btn btn-danger"%>
+        </div>
       <% end %>
     </div>
   </div>
