--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -8,11 +8,23 @@
         <p><%= @booking.start_date %> - <%= @booking.end_date %></p>
       </div>
       <h2 class="card-trip-pricing">
-        <%= link_to 'cancel booking', booking_path(@booking), class: "btn btn-flat", method: :delete, data: { confirm: "Are you sure?" } %>
-        <% if policy(@booking).edit? %>
-          <%= link_to 'edit booking', edit_booking_path(@booking), class: "btn btn-ghost" %>
-        <% end %>
-        <%= link_to 'back', dashboard_path, class: "btn btn-gradient" %>
+        <div class="d-flex my-3">
+          <p class="mr-3"><%= @booking.status %></p>
+          <% if !policy(@booking).edit? %>
+            <% if @booking.status == "pending" %>
+                <%= link_to "accept", approve_booking_path, method: :post, class: "btn btn-success mx-2" %>
+                <%= link_to "decline", decline_booking_path, method: :post, class: "btn btn-danger mx-2" %>
+            <% else %>
+              <%= link_to 'cancel booking', booking_path(@booking), class: "btn btn-flat", method: :delete, data: { confirm: "Are you sure?" } %>
+            <% end %>
+          <% else %>
+            <%= link_to 'cancel booking', booking_path(@booking), class: "btn btn-flat", method: :delete, data: { confirm: "Are you sure?" } %>
+          <% end %>
+          <% if policy(@booking).edit? %>
+            <%= link_to 'edit booking', edit_booking_path(@booking), class: "btn btn-ghost mx-2" %>
+          <% end %>
+          <%= link_to 'back', dashboard_path, class: "btn btn-gradient mx-2" %>
+        </div>
         </h2>
     </div>
   </div>
