--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,9 +1,18 @@
+html, body {
+  height: 100%;
+}
+
+
+
 #page-container {
   position: relative;
-  margin: 0 auto;
+  margin : 0px auto 80px auto;
   height: 100%;
   min-height: 100%;
+  padding: 0;
+
 }
+
 
 .footer {
   background: #F4F4F4;
@@ -13,10 +22,9 @@
   height: 2.5rem;
   padding: 0px 30px;
   color: rgba(0,0,0,0.3);
-  position: relative;
+  position: fixed;
   width: 100%;
   bottom: 0;
-  margin-top: 5px;
 }
 .footer-links {
   display: flex;
