--- a/app/views/boats/_info_window.html.erb
+++ b/app/views/boats/_info_window.html.erb
@@ -1,3 +1,3 @@
-
-<h2><%= boat.name %></h2>
-<p><%= boat.price %></p>
+<%= cl_image_tag boat.image.key, class: "p-0 m-0 boat-pop-image" %>
+<h2 id="boat-pop-name"><%= boat.name %></h2>
+<p id="boat-pop-price"><%= boat.price.floor %>€ / day</p>
